--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a class="nohov" href=""><img src="./assets/img/logo-late-night-white-echlonage.png" alt="Late-Night logo " class="logo"></a>
         <a href="" class="style__btn__2">Histoire</a>
         <a href="./communnity.html  " class="style__btn__2">Communauté</a>
-        <a href="" class="style__btn__2">Score</a>
+        <a href="" class="style__btn__2">Archive</a>
         <button href="" class="burger"><span class="bar"></span></button>
     </header>
     <main>
@@ -70,7 +70,7 @@
             </div>
             <div class="footer__right">
                 <div class="footer__lright">
-                    <a href="" class="btn__3">Score</a>
+                    <a href="" class="btn__3">Archive</a>
                     <a href="" class="btn__4">Mention Légales</a>
                 </div>
                 <div class="footer__rright">
