--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="./assets/icons/logo-late-night-favicon.svg">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="" defer></script>
 </head>
 <body>
     <header>
