--- a/communnity.html
+++ b/communnity.html
@@ -7,14 +7,14 @@
     <link rel="icon" type="image/x-icon" href="./assets/icons/logo-late-night-favicon.svg">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <script src="" defer></script>
+    <script src="./js/script.js" defer></script>
 </head>
 <body>
     <header>
         <a class="nohov" href=""><img src="./assets/img/logo-late-night-white-echlonage.png" alt="Late-Night logo " class="logo"></a>
         <a href="" class="style__btn__2">Histoire</a>
         <a href="./index.html" class="style__btn__2">Accueil</a>
-        <a href="" class="style__btn__2">Archive</a>
+        <a href="" class="style__btn__2">Bibliothèque</a>
         <button href="" class="burger"><span class="bar"></span></button>
     </header>
     <main class="banner">
@@ -123,7 +123,7 @@
             </div>
             <div class="footer__right">
                 <div class="footer__lright">
-                    <a href="" class="btn__3">Archive</a>
+                    <a href="" class="btn__3">Bibliothèque</a>
                     <a href="" class="btn__4">Mention Légales</a>
                 </div>
                 <div class="footer__rright">
