--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="icon" type="image/x-icon" href="./assets/icons/logo-late-night-favicon.svg">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <script src="" defer></script>
+    <script src="./js/script.js" defer></script>
 </head>
 <body>
     <header>
         <a class="nohov" href=""><img src="./assets/img/logo-late-night-white-echlonage.png" alt="Late-Night logo " class="logo"></a>
         <a href="" class="style__btn__2">Histoire</a>
         <a href="./communnity.html  " class="style__btn__2">Communauté</a>
-        <a href="" class="style__btn__2">Archive</a>
+        <a href="" class="style__btn__2">Bibliothèque</a>
         <button href="" class="burger"><span class="bar"></span></button>
     </header>
     <main>
@@ -35,12 +35,13 @@
                             <img class="logo__hero__left" src="./assets/img/logo-late-night-white.svg" alt="logo late night white">
                         </div>
                     </section>
-                    <section class="vidéo">
-                        <h2>Regarde, Une Nouvelle Vidéo !!!</h2>
-                        <div class="vidéo__content">
-                            <h3>Late Night Ep.2 - La rencontre</h3>
-                            <a href=""><img src="./assets/img/blanc.svg" alt=""></a>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, officia possimus corporis pariatur quaerat unde quidem? Aliquid neque ipsum quasi mollitia officiis saepe eveniet, aperiam, nostrum dolorem fugiat, animi vero? Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, nam, nostrum sed facere aliquam quia maiores dolore ipsa doloremque vero architecto aspernatur. Quas modi fugiat harum saepe eaque, nesciunt maxime.</p>
+                    <section class="video">
+                        <h2>Regarde, Une Nouvelle video !!!</h2>
+                        <div class="video__content">
+                            <h3 id="titreVideo">Late Night Ep.2 - La rencontre</h3>
+                            <div id="BlockVideo">
+                                <p>Chargement de la video...</p>
+                            </div>
                         </div>
                     </section>
                     <div class="sabonner">
@@ -71,7 +72,7 @@
             </div>
             <div class="footer__right">
                 <div class="footer__lright">
-                    <a href="" class="btn__3">Archive</a>
+                    <a href="" class="btn__3">Bibliothèque</a>
                     <a href="" class="btn__4">Mention Légales</a>
                 </div>
                 <div class="footer__rright">
