ajout bouton header

--- a/communnity.html
+++ b/communnity.html
@@ -12,9 +12,9 @@
 <body>
     <header>
         <a class="nohov" href=""><img src="./assets/img/logo-late-night-white-echlonage.png" alt="Late-Night logo " class="logo"></a>
-        <a href="" class="style__btn__2">Histoire</a>
+        <a href="./histoire.html" class="style__btn__2">Histoire</a>
         <a href="./index.html" class="style__btn__2">Accueil</a>
-        <a href="" class="style__btn__2">Bibliothèque</a>
+        <a href="./bibliothèque.html" class="style__btn__2">Bibliothèque</a>
         <button href="" class="burger"><span class="bar"></span></button>
     </header>
     <main class="banner">
@@ -57,7 +57,7 @@
                         </a>
                         <div class="commu__card">
                             <div class="commu__img">
-                                <img src="./assets/img/Youtube-screen.png" alt="">
+                                <img src="./assets/img/youtube-screen.png" alt="">
                             </div>
                             <div class="commu__contenu">
                                 <h3>notre chaine youtube</h3>
@@ -123,12 +123,12 @@
             </div>
             <div class="footer__right">
                 <div class="footer__lright">
-                    <a href="" class="btn__3">Bibliothèque</a>
+                    <a href="./bibliothèque.html" class="btn__3">Bibliothèque</a>
                     <a href="" class="btn__4">Mention Légales</a>
                 </div>
                 <div class="footer__rright">
                     <a href="./index.html" class="btn__3">Accueil</a>
-                    <a href="" class="btn__3">Histoire</a>
+                    <a href="./histoire.html" class="btn__3">Histoire</a>
                 </div>
             </div>
         </div>
