--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <header>
         <a class="nohov" href=""><img src="./assets/img/logo-late-night-white-echlonage.png" alt="Late-Night logo " class="logo"></a>
-        <a href="" class="style__btn__2">Histoire</a>
+        <a href="./histoire.html" class="style__btn__2">Histoire</a>
         <a href="./communnity.html  " class="style__btn__2">Communauté</a>
-        <a href="" class="style__btn__2">Bibliothèque</a>
+        <a href="./bibliothèque.html" class="style__btn__2">Bibliothèque</a>
         <button href="" class="burger"><span class="bar"></span></button>
     </header>
     <main>
@@ -72,12 +72,12 @@
             </div>
             <div class="footer__right">
                 <div class="footer__lright">
-                    <a href="" class="btn__3">Bibliothèque</a>
+                    <a href="./bibliothèque.html" class="btn__3">Bibliothèque</a>
                     <a href="" class="btn__4">Mention Légales</a>
                 </div>
                 <div class="footer__rright">
                     <a href="./communnity.html" class="btn__3">Communauté</a>
-                    <a href="" class="btn__3">Histoire</a>
+                    <a href="./histoire.html" class="btn__3">Histoire</a>
                 </div>
             </div>
         </div>
