modif js globale plus debut burger

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="icon" type="image/x-icon" href="./assets/icons/logo-late-night-favicon.svg">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/script.js" defer></script>
+    <script src="./js/video.js" defer></script>
+    <script src="./js/burger.js" defer></script>
 </head>
 <body>
     <header>
@@ -16,6 +17,11 @@
         <a href="./communnity.html  " class="style__btn__2">Communauté</a>
         <a href="./bibliothèque.html" class="style__btn__2">Bibliothèque</a>
         <button href="" class="burger"><span class="bar"></span></button>
+        <div class="burgerdiv">
+            <a href="./histoire.html" class="style__btn__3">Histoire</a>
+            <a href="./communnity.html  " class="style__btn__3">Communauté</a>
+            <a href="./bibliothèque.html" class="style__btn__3">Bibliothèque</a>
+        </div>
     </header>
     <main>
         <div class="banner">
