--- a/communnity.html
+++ b/communnity.html
@@ -7,7 +7,8 @@
     <link rel="icon" type="image/x-icon" href="./assets/icons/logo-late-night-favicon.svg">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/script.js" defer></script>
+    <script src="./js/carousselle.js" defer></script>
+    <script src="./js/burger.js" defer></script>
 </head>
 <body>
     <header>
