--- a/histoire.html
+++ b/histoire.html
@@ -16,6 +16,11 @@
         <a href="./index.html" class="style__btn__2">Accueil</a>
         <a href="./bibliothèque.html" class="style__btn__2">Bibliothèque</a>
         <button href="" class="burger"><span class="bar"></span></button>
+        <div class="burgerdiv">
+            <a href="./index.html" class="style__btn__3">Accueil</a>
+            <a href="./communnity.html  " class="style__btn__3">Communauté</a>
+            <a href="./bibliothèque.html" class="style__btn__3">Bibliothèque</a>
+        </div>
     </header>
     <main>
         
