--- a/histoire.html
+++ b/histoire.html
@@ -33,7 +33,10 @@
     <main>
         <div class="test">
             <button class="fullscreen"></button>
-            <img src="./assets/img/book_anim.gif">
+            <div>
+                <img src="./assets/img/thomas-qui-saute.gif">
+                <img src="./assets/img/mos no mouve.png">
+            </div>
         </div>
     </main>
     <footer>
