page mention légales

--- a/mention.html
+++ b/mention.html
@@ -7,20 +7,19 @@
     <link rel="icon" type="image/x-icon" href="./assets/icons/logo-late-night-favicon.svg">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/video.js" defer></script>
     <script src="./js/burger.js" defer></script>
 </head>
 <body>
     <header>
         <a class="nohov" href=""><img src="./assets/img/logo-late-night-white-echlonage.png" alt="Late-Night logo " class="logo"></a>
+        <a href="./index.html" class="style__btn__2">Accueil</a>
         <a href="./histoire.html" class="style__btn__2">Histoire</a>
-        <a href="./communnity.html  " class="style__btn__2">Communauté</a>
-        <a href="./bibliothèque.html" class="style__btn__2">Bibliothèque</a>
+        <a href="./communnity.html" class="style__btn__2">Communauté</a>
         <button href="" class="burger"><span class="bar"></span></button>
         <div class="burgerdiv">
+            <a href="./index.html" class="style__btn__3">Accueil</a>
             <a href="./histoire.html" class="style__btn__3">Histoire</a>
             <a href="./communnity.html  " class="style__btn__3">Communauté</a>
-            <a href="./bibliothèque.html" class="style__btn__3">Bibliothèque</a>
             <div class="réseaux__burger">
                 <a class="svg__link" href="https://youtube.com"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M549.7 124.1c-6.3-23.7-24.8-42.3-48.3-48.6C458.8 64 288 64 288 64S117.2 64 74.6 75.5c-23.5 6.3-42 24.9-48.3 48.6-11.4 42.9-11.4 132.3-11.4 132.3s0 89.4 11.4 132.3c6.3 23.7 24.8 41.5 48.3 47.8C117.2 448 288 448 288 448s170.8 0 213.4-11.5c23.5-6.3 42-24.2 48.3-47.8 11.4-42.9 11.4-132.3 11.4-132.3s0-89.4-11.4-132.3zm-317.5 213.5V175.2l142.7 81.2-142.7 81.2z"/></svg></a>
                 <a class="svg__link" href="https://twitch.tv"><svg class="little__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M391.2 103.5H352.5v109.7h38.6zM285 103H246.4V212.8H285zM120.8 0 24.3 91.4V420.6H140.1V512l96.5-91.4h77.3L487.7 256V0zM449.1 237.8l-77.2 73.1H294.6l-67.6 64v-64H140.1V36.6H449.1z"/></svg></a>
@@ -29,49 +28,40 @@
             </div>
         </div>
     </header>
-    <main>
-        <div class="banner">
-            <div class="banner__top__top">
-                <img src="./assets/img/bench without can.png" alt="banner__late-Night" class="banner__top">
-            </div>
-            <div class="hero__graphique">
-                <img class="arbre__violet" src="./assets/img/left-tree-violet.svg" alt="arbre violet">
-                <div class="contenu">
-                    <section class="hero">
-                        <h1>Bienvenue sur le site de Late Night</h1>
-                        <div class="hero__content">
-                            <div class="hero__left">
-                                <h3>Avant de commencer, pourquoi un site ?</h3>
-                                <p>On a lancé un site web pour aller plus loin que YouTube. C’est un espace à part pour centraliser nos contenus, partager des infos sur les épisodes, proposer des ressources complémentaires, et créer un vrai lien avec vous. En gros, c’est l’extension naturelle de la chaîne : un endroit pensé pour ceux qui veulent creuser, suivre l’émission autrement, et faire partie de l’aventure.</p>
-                            </div>
-                            <img class="logo__hero__left" src="./assets/img/logo-late-night-white.svg" alt="logo late night white">
-                        </div>
-                    </section>
-                    <section class="video">
-                        <h2>Regarde, Une Nouvelle video !!!</h2>
-                        <div class="video__content">
-                            <h3 id="titreVideo">Late Night Ep.2 - La rencontre</h3>
-                            <div id="BlockVideo">
-                                <p>Chargement de la video...</p>
-                            </div>
-                        </div>
-                    </section>
-                    <div class="sabonner">
-                        <a class="hov" href="">S'abonner</a>
-                    </div>
-                    <section class="event">
-                        <div class="event__left">
-                            <h3 class="event__title">participe à un événement</h3>
-                            <a class="capphone" href=""><img src="./assets/img/insert-coin.gif" alt="insert-cap-pixel-art-moskazi"></a>
-                            <p>Envie d’être au courant avant tout le monde ? Les annonces de nos événements seront toujours dispo en avance sur le site. Que ce soit une rencontre, un live spécial ou un projet un peu fou, c’est là-bas que ça se passe en premier. Si tu veux rien louper et faire partie des premiers à t’inscrire ou à réagir, garde un œil sur le site !</p>
-                            <a class="event__btn" href="">rejoindre l’event</a>
-                        </div>
-                        <a class="capdesk" href=""><img src="./assets/img/insert-coin.gif" alt="insert-cap-pixel-art-moskazi"></a>
-                    </section>
-                </div>
-                <img class="arbre__orange" src="./assets/img/right-tree-orange.svg" alt="arbre orange">
-            </div>
-            <img src="./assets/img/bench with can.png" alt="" class="banner__bot">
+    <main class="div__mention">
+        <div class="banner__top__top">
+            <img src="./assets/img/bench without can.png" alt="banner__late-Night" class="banner__top">
+        </div>
+        <h1>Mentions légales</h1>
+        <div class="mention">
+            <h2>Éditeur du site</h2>
+            <p>
+                Nom du propriétaire du site : PFAU Thomas (Lotre) <br>
+                Adresse e-mail : late.night.lotre.mos@gmail.com <br>
+                Site personnel/artistique : Late-Night
+            </p>
+        </div>
+        <div class="mention">
+            <h2>Hébergeur</h2>
+            <p>
+                O2switch Sàrl au capital de 100 000€ – Marque o2switch déposée INPI 09 3 645 729<br>
+                Siret : 510 909 80700024 – Numéro de TVA Intracommunautaire : FR35510909807<br>
+                RCS Clermont-Ferrand | Siège social : 222-224 Boulevard Gustave Flaubert – 63000 Clermont-Ferrand – FRANCE
+            </p>
+        </div>
+        <div class="mention">
+            <h2>Propriété intellectuelle</h2>
+            <p>
+                L’ensemble des contenus présents sur ce site (images, illustrations, graphismes, logos, etc.) sont des créations originales réalisées par Lotre et Moskazi.
+                Toute reproduction, représentation, modification, publication, transmission ou dénaturation, totale ou partielle, du contenu du site est strictement interdite sans autorisation écrite préalable.
+                Toute utilisation non autorisée du contenu pourra faire l’objet de poursuites conformément aux articles L.335-2 et suivants du Code de la propriété intellectuelle.
+            </p>
+        </div>
+        <div class="mention">
+            <h2>Responsabilité</h2>
+            <p>
+                Les informations présentes sur ce site sont fournies à titre indicatif. L’éditeur ne saurait être tenu responsable d’une mauvaise utilisation du site ou d’éventuelles erreurs dans le contenu.
+            </p>
         </div>
     </main>
     <footer>
@@ -84,11 +74,11 @@
             </div>
             <div class="footer__right">
                 <div class="footer__lright">
-                    <a href="./bibliothèque.html" class="btn__3">Bibliothèque</a>
-                    <a href="./mention.html" class="btn__4">Mention Légales</a>
+                    <a href="./communnity.html" class="btn__3">Communauté</a>
+                    <a href="" class="btn__4">Mention Légales</a>
                 </div>
                 <div class="footer__rright">
-                    <a href="./communnity.html" class="btn__3">Communauté</a>
+                    <a href="./index.html" class="btn__3">Accueil</a>
                     <a href="./histoire.html" class="btn__3">Histoire</a>
                 </div>
             </div>
@@ -96,4 +86,3 @@
         <p>©2025 late Night. tous droit réservés.</p>
     </footer>
 </body>
-</html>
