--- a/mention.html
+++ b/mention.html
@@ -28,40 +28,42 @@
             </div>
         </div>
     </header>
-    <main class="div__mention">
+    <main>
         <div class="banner__top__top">
-            <img src="./assets/img/bench without can.png" alt="banner__late-Night" class="banner__top">
+                <img src="./assets/img/bench without can.png" alt="banner__late-Night" class="banner__top">
         </div>
-        <h1>Mentions légales</h1>
-        <div class="mention">
-            <h2>Éditeur du site</h2>
-            <p>
-                Nom du propriétaire du site : PFAU Thomas (Lotre) <br>
-                Adresse e-mail : late.night.lotre.mos@gmail.com <br>
-                Site personnel/artistique : Late-Night
-            </p>
-        </div>
-        <div class="mention">
-            <h2>Hébergeur</h2>
-            <p>
-                O2switch Sàrl au capital de 100 000€ – Marque o2switch déposée INPI 09 3 645 729<br>
-                Siret : 510 909 80700024 – Numéro de TVA Intracommunautaire : FR35510909807<br>
-                RCS Clermont-Ferrand | Siège social : 222-224 Boulevard Gustave Flaubert – 63000 Clermont-Ferrand – FRANCE
-            </p>
-        </div>
-        <div class="mention">
-            <h2>Propriété intellectuelle</h2>
-            <p>
-                L’ensemble des contenus présents sur ce site (images, illustrations, graphismes, logos, etc.) sont des créations originales réalisées par Lotre et Moskazi.
-                Toute reproduction, représentation, modification, publication, transmission ou dénaturation, totale ou partielle, du contenu du site est strictement interdite sans autorisation écrite préalable.
-                Toute utilisation non autorisée du contenu pourra faire l’objet de poursuites conformément aux articles L.335-2 et suivants du Code de la propriété intellectuelle.
-            </p>
-        </div>
-        <div class="mention">
-            <h2>Responsabilité</h2>
-            <p>
-                Les informations présentes sur ce site sont fournies à titre indicatif. L’éditeur ne saurait être tenu responsable d’une mauvaise utilisation du site ou d’éventuelles erreurs dans le contenu.
-            </p>
+        <div class="div__mention">
+            <h1>Mentions légales</h1>
+            <div class="mention">
+                <h2>Éditeur du site</h2>
+                <p>
+                    Nom du propriétaire du site : PFAU Thomas (Lotre) <br>
+                    Adresse e-mail : late.night.lotre.mos@gmail.com <br>
+                    Site personnel/artistique : Late-Night
+                </p>
+            </div>
+            <div class="mention">
+                <h2>Hébergeur</h2>
+                <p>
+                    O2switch Sàrl au capital de 100 000€ – Marque o2switch déposée INPI 09 3 645 729<br>
+                    Siret : 510 909 80700024 – Numéro de TVA Intracommunautaire : FR35510909807<br>
+                    RCS Clermont-Ferrand | Siège social : 222-224 Boulevard Gustave Flaubert – 63000 Clermont-Ferrand – FRANCE
+                </p>
+            </div>
+            <div class="mention">
+                <h2>Propriété intellectuelle</h2>
+                <p>
+                    L’ensemble des contenus présents sur ce site (images, illustrations, graphismes, logos, etc.) sont des créations originales réalisées par Lotre et Moskazi.
+                    Toute reproduction, représentation, modification, publication, transmission ou dénaturation, totale ou partielle, du contenu du site est strictement interdite sans autorisation écrite préalable.
+                    Toute utilisation non autorisée du contenu pourra faire l’objet de poursuites conformément aux articles L.335-2 et suivants du Code de la propriété intellectuelle.
+                </p>
+            </div>
+            <div class="mention">
+                <h2>Responsabilité</h2>
+                <p>
+                    Les informations présentes sur ce site sont fournies à titre indicatif. L’éditeur ne saurait être tenu responsable d’une mauvaise utilisation du site ou d’éventuelles erreurs dans le contenu.
+                </p>
+            </div>
         </div>
     </main>
     <footer>
