--- a/communnity.html
+++ b/communnity.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <a class="nohov" href=""><img src="./assets/img/logo-late-night-white-echlonage.png" alt="Late-Night logo " class="logo"></a>
+        <a class="nohov" href="./index.html"><img src="./assets/img/logo-late-night-white-echlonage.png" alt="Late-Night logo " class="logo"></a>
         <a href="./index.html" class="style__btn__2">Accueil</a>
         <a href="./histoire.html" class="style__btn__2">Histoire</a>
         <a href="./bibliothèque.html" class="style__btn__2">Bibliothèque</a>
@@ -20,10 +20,9 @@
         <div class="burgerdiv">
             <a href="./histoire.html" class="style__btn__3">Histoire</a>
             <a href="./index.html" class="style__btn__3">Accueil</a>
-            <a href="./histoire.html" class="style__btn__3">Histoire</a>
             <a href="./bibliothèque.html" class="style__btn__3">Bibliothèque</a>
             <div class="réseaux__burger">
-                <a class="svg__link" href="https://youtube.com"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M549.7 124.1c-6.3-23.7-24.8-42.3-48.3-48.6C458.8 64 288 64 288 64S117.2 64 74.6 75.5c-23.5 6.3-42 24.9-48.3 48.6-11.4 42.9-11.4 132.3-11.4 132.3s0 89.4 11.4 132.3c6.3 23.7 24.8 41.5 48.3 47.8C117.2 448 288 448 288 448s170.8 0 213.4-11.5c23.5-6.3 42-24.2 48.3-47.8 11.4-42.9 11.4-132.3 11.4-132.3s0-89.4-11.4-132.3zm-317.5 213.5V175.2l142.7 81.2-142.7 81.2z"/></svg></a>
+                <a class="svg__link" href="https://www.youtube.com/@Late-Night-MT" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M549.7 124.1c-6.3-23.7-24.8-42.3-48.3-48.6C458.8 64 288 64 288 64S117.2 64 74.6 75.5c-23.5 6.3-42 24.9-48.3 48.6-11.4 42.9-11.4 132.3-11.4 132.3s0 89.4 11.4 132.3c6.3 23.7 24.8 41.5 48.3 47.8C117.2 448 288 448 288 448s170.8 0 213.4-11.5c23.5-6.3 42-24.2 48.3-47.8 11.4-42.9 11.4-132.3 11.4-132.3s0-89.4-11.4-132.3zm-317.5 213.5V175.2l142.7 81.2-142.7 81.2z"/></svg></a>
                 <a class="svg__link" href="https://twitch.tv"><svg class="little__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M391.2 103.5H352.5v109.7h38.6zM285 103H246.4V212.8H285zM120.8 0 24.3 91.4V420.6H140.1V512l96.5-91.4h77.3L487.7 256V0zM449.1 237.8l-77.2 73.1H294.6l-67.6 64v-64H140.1V36.6H449.1z"/></svg></a>
                 <a class="svg__link" href="https://twitter.com"><svg class="little__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/></svg></a>
                 <a class="svg__link" href="https://instagram.com"><svg class="little__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg></a>
@@ -75,7 +74,7 @@
                             <div class="commu__contenu">
                                 <h3>notre chaine youtube</h3>
                                 <p>Envie de creuser des sujets, d’écouter des échanges sincères et des discussions passionnantes ? Notre émission est dispo sur YouTube : un podcast pensé pour ceux qui aiment prendre le temps de réfléchir, découvrir de nouveaux points de vue et entendre des voix qui sortent du cadre. Si t’as envie de contenu qui a du fond, c’est par ici que ça se passe.</p>
-                                <a class="btn__5" href="">rejoindre</a>
+                                <a class="btn__5" href="https://www.youtube.com/@Late-Night-MT" target="_blank">rejoindre</a>
                             </div>
                         </div>
                         <a href="" class="next nohov">
@@ -124,22 +123,6 @@
                     </div>
                 </div>
             </section>
-            <section>
-                <form action="" class="formulaire">
-                    <ul class="list__formulaire">
-                        <il class="elemlist__formulaire">
-                            <label for="pseudo"> pseudo</label>
-                            <input type="text" id="pseudo" value="Ex: xXxanonymousxXx">
-                        </il>
-                        <il class="elemlist__formulaire">
-                            <label for="objet">object</label>
-                            <input type="text" id="objet" value='Ex: Question sur mes pensées'>
-                        </il>
-                    </ul>
-                    <label for="contenu">contenu</label>
-                    <input type="text" id="contenu" value="Ecrivez votre message ici:">
-                </form>
-            </section>
         </div>
     </main>
     <footer>
@@ -153,7 +136,7 @@
             <div class="footer__right">
                 <div class="footer__lright">
                     <a href="./bibliothèque.html" class="btn__3">Bibliothèque</a>
-                    <a href="" class="btn__4">Mention Légales</a>
+                    <a href="./mention.html" class="btn__4">Mention Légales</a>
                 </div>
                 <div class="footer__rright">
                     <a href="./index.html" class="btn__3">Accueil</a>
