--- a/bibliothèque.html
+++ b/bibliothèque.html
@@ -30,8 +30,10 @@
         </div>
     </header>
     <main>
-        <div class="banner__top__top">
-            <img src="./assets/img/bench without can.png" alt="banner__late-Night" class="banner__top">
+        <div class="banner">
+            <div class="banner__top__top">
+                <img src="./assets/img/bench without can.png" alt="banner__late-Night" class="banner__top">
+            </div>
         </div>
         <h1 class="title__biblio">Bibliothèque de late-night</h1>
         <div class="biblio__vids">
