--- a/histoire.html
+++ b/histoire.html
@@ -7,9 +7,7 @@
     <link rel="icon" type="image/x-icon" href="./assets/icons/logo-late-night-favicon.svg">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/fulltest.css">
     <script src="./js/burger.js" defer></script>
-    <script src="./js/fullscreen.js" defer></script>
     <script src="./js/anime.js" defer></script>
 </head>
 <body>
@@ -31,8 +29,8 @@
             </div>
         </div>
     </header>
-    <main>
-        <div class="test">
+    <main class="test">
+        <div>
             <div class="anim__global">
                 <div class="animation">
                     <img id="img1" src="./assets/imganim/anime1.gif" alt="Image 1">
