modif bibli double

--- a/bibliothèque.html
+++ b/bibliothèque.html
@@ -39,6 +39,7 @@
         <div class="biblio__vids">
             <div class="recent">
                 <h2>Les vidéos de la chaine youtube</h2>
+                <div id="containerId"></div>
                 <div id="video-list"></div>
             </div>
         </div>
@@ -77,3 +78,4 @@
         <p>©2025 late Night. tous droit réservés.</p>
     </footer>
 </body>
+</html>
